mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
# Specificité de ce fichier de config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
    # Template = pod
  template: 
    # Métadonnées du pod
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
